--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,17 @@
 html,
 body {
   height: 100%;
-
-  background: #f5f5f5;
 }
-
 body {
-  margin: 0;
+  margin: 40px auto;
+  max-width: 650px;
+  line-height: 1.6;
+  font-size: 18px;
+  color: #444;
+  padding: 0 10px;
+}
+h1,
+h2,
+h3 {
+  line-height: 1.2;
 }
